force-app/main/default/objects/ARF_Trade_Reference__c/ARF_Trade_Reference__c.object-meta.xml
<CustomObject>
    <label>Trade Reference</label>
    <pluralLabel>Trade References</pluralLabel>
    <nameField>
        <label>Reference Number</label>
        <displayFormat>TR-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>