force-app/main/default/objects/ARF_Trade_Reference__c/fields/Balance_Owed__c.field-meta.xml
<CustomField>
    <fullName>Balance_Owed__c</fullName>
    <label>Balance Owed</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>