force-app/main/default/objects/ARF_Trade_Reference__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>