force-app/main/default/objects/ARF_Trade_Reference__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>